# fileFormatterAPI

./: .dockerFile  .gitignore  Cargo.toml  README.MD
src/: demos_utils.rs  main.rs  mockData.json
